test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-unmanaged-from-nonnil-owned.chpl
//  lhs: unmanaged!  rhs: owned!  error: mm

class MyClass {  var x: int;  }

var rhs = new owned MyClass();

record MyRecord {
  var lhs: unmanaged MyClass;
  proc init(in rhs) where ! isSubtype(rhs.type, MyRecord) {
    lhs = rhs;
  }
}

var myr = new MyRecord(rhs);

compilerError("done");
